dxscale/core/commons/taskTrigger/objects/TaskControlSwitch__c/TaskControlSwitch__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Task Control Switch</label>
</CustomObject>