dxscale/core/commons/taskTrigger/objects/TaskControlSwitch__c/fields/RunAssignmentRules__c.field-meta.xml
<CustomField>
    <fullName>RunAssignmentRules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Assignment Rules</label>
    <type>Checkbox</type>
</CustomField>