dxscale/core/commons/taskTrigger/objects/TaskControlSwitch__c/fields/RunProcessBuilder__c.field-meta.xml
<CustomField>
    <fullName>RunProcessBuilder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Process Builder</label>
    <type>Checkbox</type>
</CustomField>