dxscale/core/commons/taskTrigger/objects/TaskControlSwitch__c/fields/RunTrigger__c.field-meta.xml
<CustomField>
    <fullName>RunTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Trigger</label>
    <type>Checkbox</type>
</CustomField>