dxscale/core/commons/taskTrigger/objects/TaskControlSwitch__c/fields/SendOutBoundMessages__c.field-meta.xml
<CustomField>
    <fullName>SendOutBoundMessages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send OutBound Messages</label>
    <type>Checkbox</type>
</CustomField>